Relations: Please allow literals
Literal support in the relation editor, stored as LITERAL:"test" or LITERAL:10
support at runtime for the literals, except solution model

Case: SVY-500